hphp/test/zend/good/ext/xml/tests/bug32001.php.skipif
<?php
require_once("skipif.inc");
if (!extension_loaded('iconv')) die ("skip iconv extension not available");
?>