hphp/test/zend/bad/ext/xml/tests/bug49687.php.skipif
<?php
require_once("skipif.inc");
if (!extension_loaded('xml')) die ("skip xml extension not available");
?>